# haskellProject

./: client_session_key.aes  stack.yaml
.stack-work/install/x86_64-linux/lts-7.10/8.0.1/flag-cache/: haskellProject-0.0.0
frontend/: index.html  main.js
frontend/controllers/: lachonete-add-controller.js  lanchonete-produtos-controller.js  lista-controller.js  produto-add-controller.js
frontend/directives/: meus-produtos.html  minha-nav.html  minhas-diretivas.js  minhas-lanchonetes.html
frontend/styles/: style.css
frontend/views/: cadastroLanchonete.html  lanchoneteProdutos.html  lanchoneteadd.html  listaLanchonetes.html  listaLanchonetesProdutos.html  login.html  produtoadd.html
haskellProject/: Application.hs  Curl  Foundation.hs  Locais.hs  Main.hs  Produtos.hs  TiposUsuarios.hs  Usuarios.hs  client_session_key.aes  haskellProject.cabal  routes
haskellProject/Handlers/: Locais.hs  Login.hs  Produtos.hs  Reservas.hs  ReservasProdutos.hs  TiposUsuarios.hs  Usuarios.hs
