name:               haskellProject
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          haskellProject
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    Handlers.Login
                    Handlers.Locais
                    Handlers.Produtos
                    Handlers.TiposUsuarios
                    Handlers.Usuarios
                    Handlers.Reservas

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-auth
                , text                          
                , persistent                    
                , persistent-postgresql
                , aeson
                , monad-logger
                , wai-cors
                
  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N